manifests/security/kyverno-policies/ingress-external-dns.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-external-dns
  annotations:
    policies.kyverno.io/title: Apply Ingress External-DNS Annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates external-dns annotations on ingresses.
      When the `external-dns.home.arpa/enabled` annotation is `true`
      it applies the external-dns annotations for use with external
      application access.
spec:
  rules:
    - name: external-dns
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                external-dns.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): ingress.tylercash.dev
